--- a/web_out/main_block.html
+++ b/web_out/main_block.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>#{main_block_title}</h1>
-		<h2>#{main_block_subtitle}</h2>
+		<h1>Hello from construct.rs!</h1>
+		<h2>I don't know what I am doing...</h2>
 	</body>
 </html>
