--- a/web_out/main_block.html
+++ b/web_out/main_block.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<body>
-		<h1>Hello from construct.rs!</h1>
-		<h2>I don't know what I am doing...</h2>
-	</body>
-</html>
+<!DOCTYPE html><html><body>
+<h1>Hello from construct.rs</h1>
+<h2>I don't know what I am doing...</h2>
+<div>
+<h1>This is a sub block!</h1>
+<h2>Just look at it...</h2>
+</div></body></html>
