--- a/web_out/main_block.html
+++ b/web_out/main_block.html
@@ -1,7 +1,12 @@
-<!DOCTYPE html><html><body>
+<!DOCTYPE html>
+<html>
+  <head>
+<link rel="stylesheet" href="test_stylesheet.css" />  </head>
+  <body>
 <h1>Hello from construct.rs</h1>
 <h2>I don't know what I am doing...</h2>
-<div>
-<h1>This is a sub block!</h1>
-<h2>Just look at it...</h2>
-</div></body></html>
+<div id="sub_block">
+<iframe width="100%" height="100%" frameborder="0" src="sub_block.html"></iframe>
+</div>
+  </body>
+</html>
