--- a/web_out/main_block.html
+++ b/web_out/main_block.html
@@ -5,8 +5,15 @@
   <body>
 <h1>Hello from construct.rs</h1>
 <h2>I don't know what I am doing...</h2>
-<div id="sub_block">
-<iframe width="100%" height="100%" frameborder="0" src="sub_block.html"></iframe>
+<div style="width: 100%; display: table;">
+<div style="display: table-row">
+<div id="sub_block_1" style="display: table-cell;">
+<iframe width="100%" height="100%" frameborder="0" src="sub_block_1.html"></iframe>
+</div>
+<div id="sub_block_2" style="display: table-cell;">
+<iframe width="100%" height="100%" frameborder="0" src="sub_block_2.html"></iframe>
+</div>
+</div>
 </div>
   </body>
 </html>
