--- a/web_out/main_block.html
+++ b/web_out/main_block.html
@@ -7,10 +7,10 @@
 <h2>I don't know what I am doing...</h2>
 <div style="width: 100%; display: table;">
 <div style="display: table-row">
-<div id="sub_block_1" style="display: table-cell;">
+<div id="sub_block_1" style="display: table-cell; width:30%">
 <iframe width="100%" height="100%" frameborder="0" src="sub_block_1.html"></iframe>
 </div>
-<div id="sub_block_2" style="display: table-cell;">
+<div id="sub_block_2" style="display: table-cell; width:70%">
 <iframe width="100%" height="100%" frameborder="0" src="sub_block_2.html"></iframe>
 </div>
 </div>
