Better html indentation

--- a/web_out/main_block.html
+++ b/web_out/main_block.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link rel="stylesheet" href="test_stylesheet.css" />  </head>
+      <link rel="stylesheet" href="test_stylesheet.css" />
+  </head>
   <body>
 <h1>Hello from construct.rs</h1>
 <h2>I don't know what I am doing...</h2>
-<div style="width: 100%; display: table;">
-<div style="display: table-row">
-<div id="sub_block_1" style="display: table-cell; width:30%">
-<iframe width="100%" height="100%" frameborder="0" src="sub_block_1.html"></iframe>
-</div>
-<div id="sub_block_2" style="display: table-cell; width:70%">
-<iframe width="100%" height="100%" frameborder="0" src="sub_block_2.html"></iframe>
-</div>
-</div>
-</div>
+    <div style="width: 100%; display: table;">
+      <div style="display: table-row">
+        <div id="sub_block_1" style="display: table-cell; width:30%">
+          <iframe width="100%" height="100%" frameborder="0" src="sub_block_1.html"></iframe>
+        </div>
+        <div id="sub_block_2" style="display: table-cell; width:70%">
+          <iframe width="100%" height="100%" frameborder="0" src="sub_block_2.html"></iframe>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
